--- a/index.html
+++ b/index.html
@@ -174,7 +174,11 @@ Un viajero solitario. Un pueblo maldito. Un misterio letal que devora todo lo qu
              <button type="submit">Enviar</button>
           </form>
       </section>
-  
+
+    <footer>
+        <p>© 2025 Sony Interactive Entertainment LLC
+        </p>
+    </footer>
 
 </body>
 </html>
